mailscripts (0.20-2) UNRELEASED; urgency=medium

  * mailscripts.el:
    - new command: notmuch-slurp-debbug-at-point

 -- Sean Whitton <spwhitton@spwhitton.name>  Sat, 23 May 2020 10:49:57 -0700

mailscripts (0.20-1) unstable; urgency=medium

  * imap-dl: Fix failure when python3-gssapi isn't installed (Closes: #955011).
    Thanks to Robbie Harwood for the patch.
  * imap-dl: Update for imaplib type changes (Closes: #959607).
    Thanks to Robbie Harwood for the patch and David Bremner for testing.
  * notmuch-slurp-debbug: Fix reading configuration file (Closes: #958391).
    Thanks to intrigeri for the patch.
  * mailscripts.el:
    - Change prompt "branch name" -> "new branch name".
      When the user inputs a branch name, it is used only to attempt the
      creation of a new branch, but the old prompt suggests that inputting
      an existing branch name would cause that branch to be checked out.
    - Add mailscripts-detach-head-from-existing-branch defcustom.
    - notmuch-extract-message-patches: set NO-STRICT-MIME argument of
      `mm-dissect-buffer' to enable extracting patches from more messages.
    - notmuch-extract-message-patches: attempt to improve regexp to
      extract more wanted patches.
  * maildir-import-patch: Prepend "[PATCH fooproject imported]" to the
    subject lines of patches, unless the user supplies a --subject-prefix
    option to be passed on to git-format-patch(1).
    This makes patches generated by this script more easily
    distinguishable from patches really received by e-mail.
    - Add libgit-wrapper-perl to Recommends.
  * Add mailing list & IRC channel info to CONTRIBUTING.rst.

 -- Sean Whitton <spwhitton@spwhitton.name>  Tue, 05 May 2020 10:53:38 -0700

mailscripts (0.19-1) unstable; urgency=medium

  * notmuch-slurp-debbug: rework to use Mail::Box rather than shelling out
    to scripts to move mail around.
    - Drop dependency on libmime-tools-perl.
  * imap-dl: